sample-app/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-go
  labels:
    app: helloworld-go
spec:
  containers:
  - name: helloworld-go
    image: image-registry.openshift-image-registry.svc:5000/grebane/hello-openshift
    ports:
    - name: web
      containerPort: 8090
      protocol: TCP
