sample-app/sample-app.yaml
# Namespace for sample application
apiVersion: v1
kind: Namespace
metadata:
  name: gcrebane
---
# Helloworld-go app deploment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-go
  namespace: gcrebane
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: helloworld-go
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: helloworld-go
          image: 

---
# Service that exposes helloworld-go app.
# This will be the subscriber for the Trigger
kind: Service
apiVersion: v1
metadata:
  name: helloworld-go
  namespace: knative-samples
spec:
  selector:
    app: helloworld-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
