sample-app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld-go
  name: helloworld-go
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: helloworld-go
    weight: 100
  tls:
    termination: edge
  wildcardPolicy: None
